# Remote

./: .env.example  .gitignore  DESIGN_BRIEF.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py  admin_cases.py  admin_replay.py  admin_ui.py  webhooks_kissflow.py  webhooks_notion.py  webhooks_remote.py
app/core/: config.py  correlation.py  idempotency.py  logging.py  security.py
app/db/: session.py
app/models/: audit_log.py  base.py  document_check.py  escalation.py  onboarding_case.py  onboarding_event.py  sync_task.py  validation_result.py
app/queue/: memory_queue.py  sqs_client.py
app/schemas/: internal.py  kissflow.py  notion.py  remote.py  slack.py
app/services/: escalation_service.py  kissflow_service.py  normalizer.py  reconciliation_service.py  slack_service.py  state_machine.py  validator.py
app/templates/admin/: base.html  case_detail.html  case_list.html  dashboard.html
app/workers/: process_case.py  process_notion_sync.py  process_remote_sync.py  process_slack_notify.py  sweep_stuck_cases.py
scripts/: seed_test_data.py
tests/: conftest.py
tests/integration/: test_webhook_to_case.py
tests/unit/: test_idempotency.py  test_normalizer.py  test_state_machine.py  test_validator.py
